<resources>
    <string name="app_name">MalinkiEco</string>
    <string name="tagline">Поселок, платежи, события и общий чат в одном приложении</string>
    <string name="app_version_label">v2.2b</string>
    <string name="welcome_title">Вход в систему</string>
    <string name="login_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="logout_button">Выйти</string>
    <string name="settings_button">Настройки</string>
    <string name="events_tab">Объявления</string>
    <string name="residents_tab">Собственники</string>
    <string name="chat_tab">Чат</string>
    <string name="logs_tab">Логи</string>
    <string name="summary_open_payments_button">Раздел оплаты</string>
    <string name="back_button">Назад</string>
    <string name="payments_screen_title">Раздел оплаты</string>
    <string name="payments_screen_subtitle">Взнос, перевод и реквизиты</string>
    <string name="residents_title">Список собственников</string>
    <string name="admin_tools">Управление пользователями</string>
    <string name="admin_tools_open">Развернуть панель</string>
    <string name="admin_tools_close">Свернуть панель</string>
    <string name="event_tools">События и уведомления</string>
    <string name="create_announcement_panel_title">Создать объявление</string>
    <string name="create_announcement_button">Опубликовать объявление</string>
    <string name="create_payment_event_panel_title">Создать сбор или оплату</string>
    <string name="create_payment_event_button">Опубликовать запись</string>
    <string name="create_event_panel_title">Создать событие</string>
    <string name="event_title_hint">Заголовок события</string>
    <string name="event_message_hint">Описание события</string>
    <string name="event_amount_hint">Сумма сбора</string>
    <string name="event_info_button">Просто уведомление</string>
    <string name="event_charge_button">Сбор средств</string>
    <string name="create_event_button">Опубликовать событие</string>
    <string name="plot_hint">Название участка</string>
    <string name="fullname_hint">ФИО</string>
    <string name="add_user_button">Создать пользователя</string>
    <string name="payment_hint">Сумма оплаты</string>
    <string name="pay_button">Оплатить</string>
    <string name="pay_button_online">Оплатить онлайн</string>
    <string name="chat_hint">Сообщение для всех собственников</string>
    <string name="send_button">Отправить</string>
    <string name="balance_hero_format">%1$d ₽</string>
    <string name="balance_format">Баланс: %1$d ₽</string>
    <string name="status_overpaid">Переплата</string>
    <string name="status_debt">Задолженность</string>
    <string name="status_zero">В ноль</string>
    <string name="add_100">+100</string>
    <string name="minus_100">-100</string>
    <string name="delete_user">Удалить</string>
    <string name="promote_moderator">Сделать модератором</string>
    <string name="demote_moderator">Снять модератора</string>
    <string name="role_admin">Администратор</string>
    <string name="role_moderator">Модератор</string>
    <string name="role_user">Собственник</string>
    <string name="admin_dashboard_title">Панель администратора</string>
    <string name="user_dashboard_title">Личный кабинет</string>
    <string name="moderator_dashboard_title">Панель модератора</string>
    <string name="your_plot">Ваш участок: %1$s</string>
    <string name="chat_empty">Пока нет сообщений. Начните разговор.</string>
    <string name="residents_empty">Пользователи пока не добавлены.</string>
    <string name="events_empty">Событий пока нет.</string>
    <string name="load_more_events">Загрузить еще</string>
    <string name="events_title">Последние события</string>
    <string name="logs_title">Действия модераторов и администраторов</string>
    <string name="logs_empty">Логов пока нет.</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_theme_title">Тема приложения</string>
    <string name="settings_theme_system">Системная</string>
    <string name="settings_theme_light">Светлая</string>
    <string name="settings_theme_dark">Темная</string>
    <string name="settings_notifications_chat_title">Уведомления чата</string>
    <string name="settings_notifications_events_title">Уведомления событий</string>
    <string name="settings_notifications_payments_title">Уведомления по оплатам и заявкам</string>
    <string name="settings_notifications_chat_messages">Новые сообщения</string>
    <string name="settings_notifications_chat_mentions">Упоминания и @все</string>
    <string name="settings_notifications_events_general">Объявления и сборы</string>
    <string name="settings_notifications_events_polls">Опросы</string>
    <string name="settings_notifications_payments_status">Подтверждение и отклонение оплат</string>
    <string name="settings_notifications_registration_status">Одобрение и отклонение регистрации</string>
    <string name="settings_notifications_payment_requests">Новые заявки на оплату</string>
    <string name="settings_notifications_registration_requests">Новые заявки на регистрацию</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="audit_logs_load_failed">Не удалось загрузить логи</string>
    <string name="audit_log_meta_format">%1$s • %2$s</string>
    <string name="audit_log_target_format">Участник: %1$s</string>
    <string name="audit_log_target_with_plot_format">Участник: %1$s • %2$s</string>
    <string name="event_meta_format">%1$s • %2$s</string>
    <string name="event_type_info">Уведомление</string>
    <string name="event_type_charge_with_amount">Сбор: %1$d ₽</string>
    <string name="new_event_toast">Новое событие: %1$s</string>
    <string name="push_channel_name">События поселка</string>
    <string name="push_channel_description">Уведомления о событиях и сборах</string>
    <string name="push_default_title">Новое событие</string>
    <string name="push_default_body">В приложении появилось новое событие</string>
    <string name="profile_not_found">Профиль пользователя не найден в базе</string>
    <string name="login_empty_fields">Введите почту и пароль</string>
    <string name="account_profile_missing">Для этого аккаунта не найден профиль</string>
    <string name="login_failed">Ошибка входа: %1$s</string>
    <string name="generic_error">неизвестная ошибка</string>
    <string name="users_load_failed">Не удалось загрузить список пользователей</string>
    <string name="events_load_failed">Не удалось загрузить события</string>
    <string name="chat_load_failed">Не удалось загрузить чат</string>
    <string name="chat_load_older_failed">Не удалось подгрузить старые сообщения</string>
    <string name="user_form_empty">Заполните все поля пользователя</string>
    <string name="user_created">Пользователь создан</string>
    <string name="user_create_failed">Не удалось создать пользователя: %1$s</string>
    <string name="moderator_assigned">Пользователь назначен модератором</string>
    <string name="moderator_removed">Роль модератора снята</string>
    <string name="role_change_failed">Не удалось изменить роль пользователя</string>
    <string name="event_title_required">Введите заголовок события</string>
    <string name="event_amount_required">Для сбора нужна сумма больше нуля</string>
    <string name="event_created">Событие опубликовано</string>
    <string name="event_create_failed">Не удалось создать событие: %1$s</string>
    <string name="balance_change_failed">Не удалось изменить баланс</string>
    <string name="delete_self_forbidden">Нельзя удалить собственную учетную запись</string>
    <string name="user_deleted">Пользователь удален</string>
    <string name="user_delete_failed">Не удалось удалить пользователя</string>
    <string name="payment_amount_invalid">Введите корректную сумму</string>
    <string name="payment_saved">Оплата сохранена</string>
    <string name="payment_save_failed">Не удалось сохранить оплату</string>
    <string name="payments_backend_not_configured">Оплата еще не подключена. Нужно указать адрес платежного backend.</string>
    <string name="payment_auth_failed">Не удалось подтвердить пользователя</string>
    <string name="payment_redirect_started">Открываю форму оплаты ЮKassa</string>
    <string name="payment_create_failed">Не удалось создать платеж: %1$s</string>
    <string name="payment_success_synced">Оплата подтверждена, баланс обновится автоматически</string>
    <string name="payment_canceled">Платеж отменен</string>
    <string name="payment_pending">Платеж еще обрабатывается</string>
    <string name="payment_status_unknown">Статус платежа пока не определен</string>
    <string name="payment_status_check_failed">Не удалось проверить статус платежа</string>
    <string name="chat_message_empty">Введите сообщение</string>
    <string name="chat_send_failed">Не удалось отправить сообщение</string>
    <string name="mark_events_read">Прочитано</string>
    <string name="unread_events_subtitle">Последнее: %1$s</string>
    <string name="unread_marker">Новое</string>
    <string name="unread_events_notification_title">%1$d новых событий</string>
    <string name="unread_events_notification_body">Последнее: %1$s</string>
    <string name="payment_request_submit">Я оплатил</string>
    <string name="payment_config_title">Добавить реквизиты</string>
    <string name="payment_config_recipient_hint">Получатель</string>
    <string name="payment_config_phone_hint">Телефон для СБП</string>
    <string name="payment_config_bank_hint">Банк</string>
    <string name="payment_config_account_hint">Номер счета</string>
    <string name="payment_config_purpose_hint">Назначение платежа</string>
    <string name="payment_config_bik_hint">БИК</string>
    <string name="payment_config_correspondent_hint">Корр. счет</string>
    <string name="payment_config_inn_hint">ИНН при необходимости</string>
    <string name="payment_config_kpp_hint">КПП при необходимости</string>
    <string name="payment_config_sbp_hint">Ссылка на оплату или QR</string>
    <string name="payment_config_save">Сохранить реквизиты</string>
    <string name="payment_transfer_title">Оплата переводом</string>
    <string name="payment_transfer_helper">Откройте ссылку в банке или нажмите на нужное поле, чтобы быстро скопировать реквизит.</string>
    <string name="payment_open_bank">Открыть в банке</string>
    <string name="payment_open_sbp">Открыть ссылку</string>
    <string name="payment_copy_details">Скопировать</string>
    <string name="payment_copy_field">Копировать</string>
    <string name="payment_requests_title">Заявки на оплату</string>
    <string name="payment_requests_empty">Заявок пока нет.</string>
    <string name="payment_requests_load_failed">Не удалось загрузить заявки на оплату</string>
    <string name="payment_config_load_failed">Не удалось загрузить реквизиты</string>
    <string name="payment_config_missing">Реквизиты для оплаты еще не заполнены</string>
    <string name="payment_request_created">Заявка на оплату отправлена</string>
    <string name="payment_request_create_failed">Не удалось отправить заявку на оплату</string>
    <string name="payment_config_saved">Реквизиты сохранены</string>
    <string name="payment_config_save_failed">Не удалось сохранить реквизиты</string>
    <string name="registration_email_hint">Почта</string>
    <string name="registration_password_hint">Придумайте пароль</string>
    <string name="registration_choose_plots">Выбрать участки</string>
    <string name="registration_plots_empty">Участки пока не выбраны</string>
    <string name="edit_balance">Изменить баланс</string>
    <string name="edit_balance_hint">Точное значение долга или переплаты</string>
    <string name="registration_display_name_hint">Псевдоним (отображаемое имя)</string>
    <string name="registration_phone_hint">10 цифр после 8, например 9991234567</string>
</resources>